$Id$

2019-03-18  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- add Intel 545s Series SSDs (PR #26)

2019-03-13  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- add Seagate Nytro SATA SSD and Seagate IronWolf 110 SATA SSD (PR #25)

2019-03-10  Christian Franke  <franke@computer.org>

	configure.ac: Pass '-pie' option directly to MinGW linker.
	This adds relocation info which is needed for ASLR (#1170).
	Document ASLR related issues of MinGW-w64 toolchain.

	Makefile.am: Remove 'Type=notify' from smartd.service if
	libsystemd-dev is not available.

2019-01-11  Christian Franke  <franke@computer.org>

	update-smart-drivedb.8.in: Add missing definition of '.Sp' macro.

	json.cpp, json.h: Add extra setter for char pointers.
	Prevent nullptr exceptions if JSON mode is not enabled.

	ataprint.cpp: Fix bogus exception on unknown form factor value
	(#1154, regression from r4640).

2019-01-01  Alex Samorukov <samm@os2.kiev.ua>

	FreeBSD: use "fetch" as default download tool
	os_freebsd.cpp: fix build on FreeBSD 12, fix nvme on Big Endian hosts
	(patch from the bugtracker)

2019-01-01  Christian Franke  <franke@computer.org>

	Happy New Year!  Update copyright year in version info.

2018-12-30  Christian Franke  <franke@computer.org>

	Rename old ChangeLog to ChangeLog-6.0-7.0.
	Remove ChangeLog-5.0-6.0 from DOCDIR but keep in tarball.
	Start new ChangeLog.

2018-12-30  Christian Franke  <franke@computer.org>

	smartmontools 7.0